Linting. Updating build list task to use get_all_finished_images module.

--- a/ansible/roles/oci-push-image/tasks/main.yaml
+++ b/ansible/roles/oci-push-image/tasks/main.yaml
@@ -15,7 +15,7 @@
 - name: Validate Blueprint Directory and Blueprint file Exists
   ansible.builtin.stat:
     path: "{{ item }}"
-  become: no
+  become: false
   delegate_to: localhost
   failed_when: not blueprint_exists.stat.exists
   register: blueprint_exists
@@ -26,7 +26,7 @@
 - name: Load Contents of Blueprint
   ansible.builtin.set_fact:
     blueprint_contents: "{{ lookup('file', blueprint_source_dir + '/blueprint.toml') }}"
-  become: no
+  become: false
   delegate_to: localhost
 
 - name: Extract Blueprint Version
@@ -34,16 +34,14 @@
     blueprint_version: "{{ blueprint_contents | regex_search('^version.*\"(.*)\"', '\\1', multiline=True) | first }}"
 
 - name: List Finished Builds
-  ansible.builtin.command: >
-    composer-cli -j compose list finished
-  changed_when: false
-  register: compose_list
+  infra.osbuild.get_all_finished_images:
+  register: all_finished_builds
 
 - name: Assert Finished Build ID Found
   ansible.builtin.assert:
     fail_msg: "Did not find a valid finished build for the commit id {{ build_commit_id }}!"
     that:
-      - compose_list.stdout | from_json | selectattr('id', 'equalto', build_commit_id) | list | length == 1
+      - all_finished_builds.result.finished | selectattr('id', 'equalto', build_commit_id) | length == 1
 
 - name: Set Remote Tar Directory
   ansible.builtin.set_fact:
@@ -68,7 +66,7 @@
     paths: "{{ tar_directory }}"
     patterns:
       - "{{ build_commit_id }}-container.tar"
-    use_regex: yes
+    use_regex: true
   register: find_results
   failed_when:
     - find_results.failed == true
@@ -78,14 +76,14 @@
   ansible.builtin.file:
     path: "{{ tar_directory }}"
     state: directory
-  become: no
+  become: false
   delegate_to: localhost
 
 - name: Fetch RFE Build tar
-  become: no
+  become: false
   ansible.builtin.fetch:
     dest: "{{ find_results.files[0].path }}"
-    flat: yes
+    flat: true
     src: "{{ find_results.files[0].path }}"
 
 - name: Remove Remote Build Directory
@@ -103,7 +101,7 @@
       - "--dest-tls-verify=false"
       - "oci-archive:{{ find_results.files[0].path | quote }}"
       - "docker://{{ quay_image_path | quote }}:latest"
-  become: no
+  become: false
   delegate_to: localhost
   register: skopeo_results
   retries: "{{ skopeo_retries }}"
@@ -121,7 +119,7 @@
       - "--dest-tls-verify=false"
       - "docker://{{ quay_image_path | quote }}:latest"
       - "docker://{{ quay_image_path | quote }}:{{ blueprint_version | quote }}"
-  become: no
+  become: false
   delegate_to: localhost
   register: skopeo_results
   retries: "{{ skopeo_retries }}"
@@ -132,12 +130,12 @@
     tag_list:
       - latest
       - "{{ blueprint_version }}"
-  become: no
+  become: false
   delegate_to: localhost
 
 - name: Save Tag List to Output File
   ansible.builtin.copy:
     content: "{{ tag_list | to_json }}"
     dest: "{{ image_tags_output_file }}"
-  become: no
+  become: false
   delegate_to: localhost
