Updating oci-build-installer-image role (composer-cli JSON change).

--- a/ansible/roles/oci-build-installer-image/tasks/main.yaml
+++ b/ansible/roles/oci-build-installer-image/tasks/main.yaml
@@ -49,34 +49,22 @@
     composer-cli -j blueprints freeze {{ blueprint_name }}
   register: frozen_blueprint
 
-- name: Generate ISO
-  block:
-    - name: Compose Image
-      ansible.builtin.command: >
-        composer-cli -j compose start-ostree --ref rhel/8/x86_64/edge --url {{ ostree_repo_url }} {{ blueprint_name }} rhel-edge-installer
-      register: composed_image
+- name: Compose Image
+  ansible.builtin.command: >
+    composer-cli -j compose start-ostree --ref rhel/8/x86_64/edge --url {{ ostree_repo_url }} {{ blueprint_name }} rhel-edge-installer
+  register: composed_image
 
-    - name: Set Build Commit ID
-      ansible.builtin.set_fact:
-        build_commit_id: "{{ (composed_image.stdout | from_json).build_id }}"
+- name: Set Build Commit ID
+  ansible.builtin.set_fact:
+    _build_id: "{{ (composed_image.stdout | from_json | first).body.build_id }}"
 
-    - name: Wait for Image Build to Complete
-      ansible.builtin.command: >
-        composer-cli -j compose status
-      changed_when: false
-      delay: 30
-      failed_when: >
-        not (image_build_status.stdout | from_json | selectattr('id', 'equalto', build_commit_id) | list | first).finished and
-        (image_build_status.stdout | from_json | selectattr('id', 'equalto', build_commit_id) | list | first).status != "FINISHED"
-      register: image_build_status
-      retries: 200
-      until: >
-        (image_build_status.stdout | from_json | selectattr('id', 'equalto', build_commit_id) | list | first).finished and
-        (image_build_status.stdout | from_json | selectattr('id', 'equalto', build_commit_id) | list | first).status == "FINISHED"
+- name: Wait for Compose to Finish
+  infra.osbuild.wait_compose:
+    compose_id: "{{ _build_id }}"
 
 - name: Save Build Commit ID to File
   ansible.builtin.copy:
-    content: "{{ build_commit_id }}"
+    content: "{{ _build_id }}"
     dest: "{{ build_commit_id_output_file }}"
   become: no
   delegate_to: localhost
