Adding namespace dependency to odf/cnv charts.

--- a/charts/odf/values.yaml
+++ b/charts/odf/values.yaml
@@ -1,4 +1,11 @@
 ---
+namespaces:
+  - name: openshift-storage
+    annotations:
+      openshift.io/description: OpenShift Data Foundation
+      openshift.io/display-name: OpenShift Data Foundation
+    labels:
+      openshift.io/cluster-monitoring: "true"
 noobaa_cleanuppolicy:
   allowNoobaaDeletion: true
 noobaa_coreresources:
