--- a/charts/cnv/Chart.yaml
+++ b/charts/cnv/Chart.yaml
@@ -7,3 +7,6 @@ dependencies:
   - name: common
     version: 0.1.0
     repository: file://../common
+  - name: namespaces
+    version: 0.1.0
+    repository: file://../namespaces
