--- a/charts/cnv/values.yaml
+++ b/charts/cnv/values.yaml
@@ -31,3 +31,10 @@ kubevirt_hyperconverged_cr:
     batchEvictionSize: 10
     workloadUpdateMethods:
       - LiveMigrate
+namespaces:
+  - name: openshift-cnv
+    annotations:
+      openshift.io/description: OpenShift Container Native Virtualization
+      openshift.io/display-name: OpenShift Container Native Virtualization
+    labels:
+      openshift.io/cluster-monitoring: "true"
