Refactor/consolidate values files.

--- a/charts/bootstrap/templates/raw.yaml
+++ b/charts/bootstrap/templates/raw.yaml
@@ -1,6 +1,8 @@
+{{- if .Values.bootstrap }}
 {{- if .Values.bootstrap.raw }}
 {{- range $raw := .Values.bootstrap.raw }}
 ---
 {{- tpl (toYaml $raw) $ }}
+{{- end }}
 {{- end }}
 {{- end }}
