--- a/charts/bootstrap/templates/appproject.yaml
+++ b/charts/bootstrap/templates/appproject.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.argocd }}
 {{- if .Values.argocd.appProjects }}
 {{- range $appProjectName, $appProject := .Values.argocd.appProjects }}
 ---
@@ -17,5 +18,6 @@ spec:
     server: '*'
   sourceRepos:
   - '*'
+{{- end }}
 {{- end }}
 {{- end }}
