--- a/charts/odf/values.yaml
+++ b/charts/odf/values.yaml
@@ -1,11 +1,12 @@
 ---
 namespaces:
-  - name: openshift-storage
-    annotations:
-      openshift.io/description: OpenShift Data Foundation
-      openshift.io/display-name: OpenShift Data Foundation
-    labels:
-      openshift.io/cluster-monitoring: "true"
+  namespaces:
+    - name: openshift-storage
+      annotations:
+        openshift.io/description: OpenShift Data Foundation
+        openshift.io/display-name: OpenShift Data Foundation
+      labels:
+        openshift.io/cluster-monitoring: "true"
 noobaa_cleanuppolicy:
   allowNoobaaDeletion: true
 noobaa_coreresources:
