Updating format of extra vars.

--- a/charts/image-builder-vm/templates/redhat-image-downloader-ansible-job.yaml
+++ b/charts/image-builder-vm/templates/redhat-image-downloader-ansible-job.yaml
@@ -25,7 +25,7 @@ spec:
             - name: GIT_BRANCH
               value: {{ $.Values.gitBranch | quote }}
             - name: EXTRA_VARS
-              value: -e {{ $.Values.imageDownloaderJob.image_checksums | toJson }}
+              value: -e image_checksums='{{ printf "{%s}" ($.Values.imageDownloaderJob.image_checksums | toJson) }}'
           command:
             - /bin/bash
             - -c
