--- a/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
@@ -29,7 +29,7 @@ spec:
             - name: GIT_BRANCH
               value: {{ $.Values.gitBranch | quote }}
             - name: IMAGE_BUILDER_REPLICAS
-              value: {{ $.Values.imageBuilderVM.replicas | quote }}
+              value: {{ include "imageBuilderReplicas" . | quote }}
           command:
             - /bin/bash
             - -c
