--- a/charts/image-builder-vm/templates/image-builder-vm-service.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm-service.yaml
@@ -1,9 +1,6 @@
-{{- $i := (.Values.imageBuilderVM.replicas | int) -}}
-{{- if not (ge $i 1) -}}
-{{- fail "imageBuilderVM.replicas must be greater than or equal to zero!" -}}
-{{- end -}}
-{{- range until $i -}}
-{{- $instance_name := printf "image-builder-%03d" . -}}
+{{- range $pool := $.Values.imageBuilderPools }}
+{{- range $i, $e := until ($pool.replicas | int) }}
+{{- $instance_name := printf "image-builder-pool-%s-%03d" $pool.name $i }}
 ---
 apiVersion: v1
 kind: Service
@@ -31,4 +28,5 @@ spec:
     vm.kubevirt.io/name: {{ $instance_name }}
   sessionAffinity: None
   type: ClusterIP
-{{ end }}
+{{- end }}
+{{- end }}
