--- a/charts/image-builder-vm/values.yaml
+++ b/charts/image-builder-vm/values.yaml
@@ -1,37 +1,33 @@
-rhel:
-  version: "8.5"
-
-imageDownloaderJob:
-  annotations:
-    argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation,HookSucceeded
-  activeDeadlineSeconds: 600
-
 ansibleVM:
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation,HookSucceeded
   activeDeadlineSeconds: 1800
-
-imageBuilderVM:
-  labels:
-    app: image-builder
-    workload.template.kubevirt.io/server: "true"
-  annotations:
-    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
-    argocd.argoproj.io/compare-options: IgnoreExtraneous
-    description: RHEL 8 With Image Builder
-  template:
-    labels:
-      app: image-builder
-      workload.template.kubevirt.io/server: "true"
-  machine:
-    type: pc-q35-rhel8.4.0
-  cores: 2
-  memory: 6Gi
-  disk: 150Gi
-  replicas: 1
-  volumeMode: Filesystem
-
 gitRepository: https://github.com/redhat-cop/rhel-edge-automation-arch.git
 gitBranch: main
+imageBuilderPools:
+  - cores: 2
+    description: RHEL 8.8 with Image Builder
+    disk: 150Gi
+    machine:
+      type: q35
+    memory: 6Gi
+    name: rhel88
+    replicas: 2
+    rhel:
+      version: '8.8'
+  - cores: 2
+    description: RHEL 9.2 with Image Builder
+    disk: 150Gi
+    machine:
+      type: q35
+    memory: 6Gi
+    name: rhel92
+    replicas: 2
+    rhel:
+      version: '9.2'
+imageDownloaderJob:
+  annotations:
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation,HookSucceeded
+  activeDeadlineSeconds: 600
