--- a/ansible/roles/image-builder/tasks/main.yaml
+++ b/ansible/roles/image-builder/tasks/main.yaml
@@ -7,7 +7,7 @@
     kind: Secret
     name: router-ca
     namespace: openshift-ingress-operator
-    validate_certs: yes
+    validate_certs: true
   become: false
   delegate_to: localhost
   register: ingress_controller_ca
@@ -34,12 +34,15 @@
     host: https://kubernetes.default.svc
     kind: Proxy
     name: cluster
-    validate_certs: yes
+    validate_certs: true
   become: false
   delegate_to: localhost
   register: cluster_proxy_resource
 
 - name: Add CAs from ConfigMap Defined in Cluster Proxy Resource
+  when:
+    - cluster_proxy_resource.resources[0].spec.trustedCA.name is defined
+    - cluster_proxy_resource.resources[0].spec.trustedCA.name != ""
   block:
     - name: Query Trusted CA ConfigMap
       community.kubernetes.k8s_info:
@@ -50,7 +53,7 @@
         kind: ConfigMap
         name: "{{ cluster_proxy_resource.resources[0].spec.trustedCA.name }}"
         namespace: openshift-config
-        validate_certs: yes
+        validate_certs: true
       become: false
       delegate_to: localhost
       register: trusted_ca_configmap
@@ -68,9 +71,6 @@
         ca_certificate_text: "{{ ca_certificate_text + \"\n\" }}"
       when:
         - ca_certificate_text[-1:] != "\n"
-  when:
-    - cluster_proxy_resource.resources[0].spec.trustedCA.name is defined
-    - cluster_proxy_resource.resources[0].spec.trustedCA.name != ""
 
 - name: Query IngressControllers
   community.kubernetes.k8s_info:
@@ -80,7 +80,7 @@
     host: https://kubernetes.default.svc
     kind: IngressController
     namespace: "{{ ingress_operator_namespace }}"
-    validate_certs: yes
+    validate_certs: true
   become: false
   delegate_to: localhost
   register: ingress_controllers
@@ -99,10 +99,14 @@
         ca_certificate_text.split('-----BEGIN CERTIFICATE-----') |
         reject('equalto', '') | list
       }}
+  become: false
+  delegate_to: localhost
 
 - name: Parse Certificates
   community.crypto.x509_certificate_info:
     content: "-----BEGIN CERTIFICATE-----{{ item }}"
+  become: false
+  delegate_to: localhost
   loop: "{{ ca_certificate_list }}"
   register: x509_certificate_info
 
@@ -113,11 +117,15 @@
         x509_certificate_info.results | to_json | from_json |
         json_query("[?basic_constraints[?contains(@, 'CA:TRUE')]].item")
       }}
+  become: false
+  delegate_to: localhost
 
 - name: Assert Parsed CA List Count > 0
   ansible.builtin.assert:
     that:
       - ca_certificate_list_parsed | count > 0
+  become: false
+  delegate_to: localhost
 
 - name: Build CA Certificate Payload
   ansible.builtin.set_fact:
@@ -126,6 +134,8 @@
         (ca_certificate_payload | default('')) +
         "-----BEGIN CERTIFICATE-----" + (item | regex_replace('(?m)^[\\n]+'))
       }}
+  become: false
+  delegate_to: localhost
   loop: "{{ ca_certificate_list_parsed }}"
 
 - name: Copy Certificate Payload to Image Builder VM
@@ -139,6 +149,9 @@
 - name: Update CA Trust
   ansible.builtin.command:
     cmd: update-ca-trust
+  changed_when:
+    - update_ca_trust_results.rc == 0
+  register: update_ca_trust_results
 
 - name: Register Host
   community.general.redhat_subscription:
@@ -152,7 +165,7 @@
     name:
       - "rhel-{{ ansible_distribution_major_version }}-for-{{ ansible_architecture }}-appstream-rpms"
       - rhel-{{ ansible_distribution_major_version }}-for-{{ ansible_architecture }}-baseos-rpms
-    purge: yes
+    purge: true
     state: enabled
 
 - name: Install Base Packages
@@ -166,7 +179,7 @@
       - genisoimage
       - httpd
       - syslinux
-    state: latest
+    state: latest # noqa: package-latest
 
 - name: Additional RHEL 8 Packages
   ansible.builtin.dnf:
@@ -187,7 +200,7 @@
 - name: Enable Cockpit/Composer/Firewalld/Apache
   ansible.builtin.systemd:
     state: started
-    enabled: yes
+    enabled: true
     name: "{{ item }}"
   loop:
     - osbuild-composer.socket
@@ -197,8 +210,8 @@
 
 - name: Enable Firewall Ports for Cockpit/Composer/Apache
   ansible.posix.firewalld:
-    permanent: yes
-    immediate: yes
+    permanent: true
+    immediate: true
     service: "{{ item }}"
     state: enabled
   loop:
