--- a/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
@@ -24,6 +24,9 @@ spec:
     - name: rhsm-repositories
       description: JSON object with list of RHEL Repos
       type: string
+    - name: vmi-pool
+      description: Builder Pool used to Initiate Compose
+      type: string
   results:
     - name: build-commit
       description: Commit ID of the Build
@@ -45,6 +48,8 @@ spec:
             -e image_builder_host_output_file=$(results.image-builder-host.path) \
             -e additional_content_sources=$(params.additional-content-sources) \
             -e rhsm_repositories=$(params.rhsm-repositories) \
+            -e pipeline_mode=true \
+            -e vmi_pool=$(params.vmi-pool) \
             playbooks/oci-create-image.yaml
       command:
         - /bin/bash
