--- a/ansible/playbooks/oci-create-image.yaml
+++ b/ansible/playbooks/oci-create-image.yaml
@@ -1,18 +1,20 @@
 - name: Generate In-Memory Inventory of OpenShift VMs
-  gather_facts: no
+  gather_facts: false
   hosts: localhost
   roles:
     - role: openshift-image-builder-imi
+      vars:
+        pipeline_mode: true
 
 - name: Find Appropriate Image Builder Host
-  become: yes
+  become: true
   hosts: builders
   roles:
     - role: pipeline-scheduler
 
 - name: Create OCI Image
-  become: yes
-  gather_facts: no
+  become: true
+  gather_facts: false
   hosts: pipeline_target_host
   tasks:
     - name: Configure Content Sources
