--- a/charts/image-builder-vm/templates/redhat-image-downloader-ansible-job.yaml
+++ b/charts/image-builder-vm/templates/redhat-image-downloader-ansible-job.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   annotations:
-    {{- toYaml .Values.imageDownloaderJob.annotations | nindent 4 }}
+    {{- toYaml .Values.imageDownloaderJobAnnotations | nindent 4 }}
   labels:
     run: redhat-image-downloader-ansible-job
   name: redhat-image-downloader-ansible-job
@@ -10,22 +10,22 @@ metadata:
 spec:
   template:
     spec:
-      activeDeadlineSeconds: {{ $.Values.imageDownloaderJob.activeDeadlineSeconds }}
+      activeDeadlineSeconds: {{ .Values.imageDownloaderJobDeadline }}
       containers:
-        - image: image-registry.openshift-image-registry.svc:5000/rfe/ansible-rfe-runner:latest
+        - image: {{ .Values.imageDownloaderJobImage }}
           env:
             - name: GIT_DIRECTORY
               value: /tmp/git/rhel-edge-automation-arch
             - name: GIT_URL
-              value: {{ $.Values.gitRepository | quote }}
+              value: {{ .Values.gitRepository | quote }}
             - name: ANSIBLE_PLAYBOOK
               value: ansible/playbooks/redhat-image-downloader.yaml
             - name: ANSIBLE_CONFIG
               value: $GIT_DIRECTORY/ansible/ansible.cfg
             - name: GIT_BRANCH
-              value: {{ $.Values.gitBranch | quote }}
+              value: {{ .Values.gitBranch | quote }}
             - name: EXTRA_VARS
-              value: -e image_checksums='{{ $.Values.imageDownloaderJob.image_checksums | toJson }}'
+              value: -e image_checksums='{{ .Values.imageDownloaderJobChecksums | toJson }}'
           command:
             - /bin/bash
             - -c
